--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- Bootstrap CSS v5.0.2 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/gh/eliyantosarage/font-awesome-pro@main/fontawesome-pro-6.5.2-web/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -29,7 +29,7 @@
 
   <header class="fixed-top">
     <h1 class="siteName">scrobblerad.io</h1>
-    <a href="https://github.com/jbwharris/scrobblerad.io" class="gitLink" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+    <a href="https://github.com/jbwharris/scrobblerad.io" class="gitLink" target="_blank"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
     <input type="checkbox" id="openSideMenu" class="openSideMenu">
     <label for="openSideMenu" class="menuIconToggle">
       <div class="hamb-line dia part-1"></div>
@@ -55,19 +55,19 @@
               <img id="albumArt" src="img/defaultArt.png" class="img-fluid rounded mx-auto d-block" width="500" height="500" alt="">
 
               <div class="media-controls">
-                <button id="skipBackButton" type="button" class="btn btn-dark btn-lg mt-3">
+                <button id="skipBack" type="button" class="btn btn-dark btn-lg mt-3">
                   <i class="fa fa-backward"></i>
                 </button>
-                <button id="playerButton" type="button" class="btn btn-dark btn-lg mt-3">
+                <button id="playButton" type="button" class="btn btn-dark btn-lg mt-3">
                   <i class="fa fa-play"></i>
                 </button>
-                <button id="skipForwardButton" type="button" class="btn btn-dark btn-lg mt-3">
+                <button id="skipForward" type="button" class="btn btn-dark btn-lg mt-3">
                   <i class="fa fa-forward"></i>
                 </button>
               </div>
             </div>
             <div class="col col-md-4 pt-3 p-4 metainfo">
-              <h4 id="title" class="text-capitalize h3"></h4>
+              <p id="title" class="text-capitalize h3"></p>
               <p id="artist" class="text-capitalize h4"></p>
               <p id="album" class="text-capitalize"></p>
               <p id="listeners" class="text-capitalize"></p>
