--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- Bootstrap CSS v5.0.2 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/gh/eliyantosarage/font-awesome-pro@main/fontawesome-pro-6.5.2-web/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/gh/dicky-alfansyah/fontawesome_pro@main/6.5.2/css/all.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
