Improved media control styles

--- a/index.html
+++ b/index.html
@@ -62,18 +62,19 @@
               <p id="stationLocation" class="fs-6"></p>
             </div>
 
-            <div class="media-controls">
-              <button id="skipBack" type="button" class="btn btn-dark btn-lg mt-3">
-                <i class="fa fa-backward"></i>
-              </button>
-              <button id="playButton" type="button" class="btn btn-dark btn-lg mt-3">
-                <i class="fa fa-play"></i>
-              </button>
-              <button id="skipForward" type="button" class="btn btn-dark btn-lg mt-3">
-                <i class="fa fa-forward"></i>
-              </button>
+            <div class="media-controls-wrapper">
+              <div class="media-controls">
+                <button id="skipBack" type="button" class="btn btn-dark btn-lg mt-3">
+                  <i class="fa fa-backward"></i>
+                </button>
+                <button id="playButton" type="button" class="btn btn-dark btn-lg mt-3">
+                  <i class="fa fa-play"></i>
+                </button>
+                <button id="skipForward" type="button" class="btn btn-dark btn-lg mt-3">
+                  <i class="fa fa-forward"></i>
+                </button>
+              </div>
             </div>
-
           </div>
       </main>
     </div>
