station/location button changes

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
               <p id="artist" class="text-capitalize h4"></p>
               <p id="album" class="text-capitalize"></p>
               <p id="listeners" class="text-capitalize"></p>
-              <a href="" id="radioName" class="btn btn-info mb-1" target="_blank"></a>
-              <p id="stationLocation" class="fs-6"></p>
+              <a href="" id="radioNameLink" class="btn btn-info mb-1" target="_blank">
+                <span id="radioName" class="fs-6"></span>
+                <span id="stationLocation" class="fs-6"></span>
+              </a>
+
             </div>
 
             <div class="media-controls-wrapper">
