--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- Bootstrap CSS v5.0.2 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/gh/dicky-alfansyah/fontawesome_pro@main/6.5.2/css/all.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/iconfont.css">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -29,7 +29,7 @@
 
   <header class="fixed-top">
     <h1 class="siteName">scrobblerad.io</h1>
-    <a href="https://github.com/jbwharris/scrobblerad.io" class="gitLink" target="_blank"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
+    <a href="https://github.com/jbwharris/scrobblerad.io" class="gitLink" target="_blank"><i class="icon-github" aria-hidden="true"></i></a>
     <input type="checkbox" id="openSideMenu" class="openSideMenu">
     <label for="openSideMenu" class="menuIconToggle">
       <div class="hamb-line dia part-1"></div>
@@ -68,13 +68,13 @@
             <div class="media-controls-wrapper">
               <div class="media-controls">
                 <button id="skipBack" type="button" class="btn btn-dark btn-lg mt-3">
-                  <i class="fa fa-backward"></i>
+                  <i class="icon-backward"></i>
                 </button>
                 <button id="playButton" type="button" class="btn btn-dark btn-lg mt-3">
-                  <i class="fa fa-play"></i>
+                  <i class="icon-play"></i>
                 </button>
                 <button id="skipForward" type="button" class="btn btn-dark btn-lg mt-3">
-                  <i class="fa fa-forward"></i>
+                  <i class="icon-forward"></i>
                 </button>
               </div>
             </div>
