--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha256-cMPWkL3FzjuaFSfEYESYmjF25hCIL6mfRSPnW8OVvM4=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/@web-scrobbler/metadata-filter@latest/dist/filter.min.js"></script>
 
-  <script src="js/stations.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/stations-dist.js"></script>
+  <script src="js/main-dist.js"></script>
 
 </body>
 
