--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
   <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: light)">
   <meta name="theme-color" content="#111111" media="(prefers-color-scheme: dark)">
 
-  <!-- Bootstrap CSS v5.0.2 -->
+  <meta property="og:title" content=scrobblerad.io - Awesome radio, everyday!>
+  <meta property="og:site_name" content=scrobblerad.io>
+  <meta property="og:url" content=https://scrobblerad.io> <meta property="og:description" content=scrobblerad.io is a curated list of radio stations that play great music. Independent stations that play new, interesting and bold music without the constraints of tiny corporate radio playlists. If you love music discovery and finding the next great jam, scrobblerad.io is for you.>
+  <meta property="og:type" content=music.radio_station>
+  <meta property="og:image" content=https://scrobblerad.io/img/social-thumb.png> <!-- Bootstrap CSS v5.0.2 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/iconfont.css">
   <link rel="stylesheet" href="css/style.css">
