--- a/index.html
+++ b/index.html
@@ -60,14 +60,6 @@
               <img id="albumArt" src="img/defaultArt.png" class="img-fluid rounded mx-auto d-block" width="500" height="500" alt="">
             </div>
             <div class="col col-md-4 pt-3 p-4 metainfo">
-              <p id="title" class="text-capitalize h3"></p>
-              <p id="artist" class="text-capitalize h4"></p>
-              <p id="album" class="text-capitalize"></p>
-              <p id="listeners" class="text-capitalize"></p>
-              <a href="" id="radioNameLink" class="btn btn-info mb-1" target="_blank">
-                <span id="radioName" class="fs-6"></span>
-                <span id="stationLocation" class="fs-6"></span>
-              </a>
 
             </div>
 
@@ -89,13 +81,24 @@
     </div>
   </div>
 
+  <template id="meta">
+    <p id="title" class="text-capitalize h3"></p>
+    <p id="artist" class="text-capitalize h4"></p>
+    <p id="album" class="text-capitalize"></p>
+    <p id="listeners" class="text-capitalize"></p>
+    <a href="" id="radioNameLink" class="btn btn-info mb-1" target="_blank">
+      <span id="radioName" class="fs-6"></span>
+      <span id="stationLocation" class="fs-6"></span>
+    </a>
+  </template>
+
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha256-cMPWkL3FzjuaFSfEYESYmjF25hCIL6mfRSPnW8OVvM4=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/@web-scrobbler/metadata-filter@latest/dist/filter.min.js"></script>
 
-  <script src="js/stations-dist.js"></script>
-  <script src="js/main-dist.js"></script>
+  <script src="js/stations.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
