Add initial load prompt

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <img id="albumArt" src="img/defaultArt.png" class="img-fluid rounded mx-auto d-block" width="500" height="500" alt="">
             </div>
             <div class="col col-md-4 pt-3 p-4 metainfo">
-
+              <p class="fs-3">Choose a station from the menu on the left to get started</p>
             </div>
 
             <div class="media-controls-wrapper">
