--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
     <div class="row">
       <main class="flex-shrink-0 col">
         <div class="container px-0" id="metadata">
-          <div id="player" class="row row-cols-1 album-controls px-0">
-            <div class="col offset-md-2 col-md-6 player px-0 mt-0" id="webamp">
-              <img id="albumArt" src="img/defaultArt.png" class="img-fluid rounded mx-auto d-block" width="500" height="500" alt="">
-            </div>
-            <div class="col col-md-4 pt-3 p-4 metainfo">
-              <p class="fs-3">Choose a station from the menu on the left to get started</p>
+          <div id="player">
+            <div class="playermeta row row-cols-1 px-0 album-controls">
+              <div class="col col-md-5 player px-0 mt-0" id="webamp">
+                <img id="albumArt" src="img/defaultArt.png" class="img-fluid rounded mx-auto d-block" width="500" height="500" alt="">
+              </div>
+              <div class="col col-md-5 pt-3 p-4 metainfo">
+                <p class="fs-3">Choose a station from the menu on the left to get started</p>
+              </div>
             </div>
 
             <div class="media-controls-wrapper">
@@ -82,14 +84,19 @@
   </div>
 
   <template id="meta">
-    <p id="title" class="text-capitalize h3"></p>
-    <p id="artist" class="text-capitalize h4"></p>
-    <p id="album" class="text-capitalize"></p>
-    <p id="listeners" class="text-capitalize"></p>
-    <a href="" id="radioNameLink" class="btn btn-info mb-1" target="_blank">
-      <span id="radioName" class="fs-6"></span>
-      <span id="stationLocation" class="fs-6"></span>
-    </a>
+    <div class="col col-md-5 player px-0 mt-0" id="webamp">
+      <img id="albumArt" src="" class="img-fluid rounded mx-auto d-block" width="500" height="500" alt="">
+    </div>
+    <div class="col col-md-5 pt-3 p-4 metainfo">
+      <p id="title" class="text-capitalize h3"></p>
+      <p id="artist" class="text-capitalize h4"></p>
+      <p id="album" class="text-capitalize"></p>
+      <p id="listeners" class="text-capitalize"></p>
+      <a href="" id="radioNameLink" class="btn btn-info mb-1" target="_blank">
+        <span id="radioName" class="fs-6"></span>
+        <span id="stationLocation" class="fs-6"></span>
+      </a>
+    </div>
   </template>
 
   <!-- Bootstrap JavaScript Libraries -->
@@ -97,8 +104,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha256-cMPWkL3FzjuaFSfEYESYmjF25hCIL6mfRSPnW8OVvM4=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/@web-scrobbler/metadata-filter@latest/dist/filter.min.js"></script>
 
-  <script src="js/stations.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/stations-dist.js"></script>
+  <script src="js/main-dist.js"></script>
 
 </body>
 
