--- a/swipe.html
+++ b/swipe.html
@@ -27,64 +27,96 @@
   <!-- Bootstrap CSS v5.0.2 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/iconfont.css">
-  <link rel="stylesheet" href="css/style-swipe.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body class="d-flex flex-column">
-
-  <header class="fixed-top">
-    <h1 class="siteName">scrobblerad.io</h1>
-    <input type="checkbox" id="openSideMenu" class="openSideMenu">
-    <label for="openSideMenu" class="menuIconToggle">
-      <div class="hamb-line dia part-1"></div>
-      <div class="hamb-line hor"></div>
-      <div class="hamb-line dia part-2"></div>
-    </label>
-  </header>
-
-  <div class="container-fluid" id="mainWrapper">
+  <div class="container-fluid" id="player">
     <div class="row">
       <main class="flex-shrink-0 col">
         <div class="container-fluid px-0" id="metadata">
           <div class="row mobile-swipe">
 
-            <div class="col col-md-2 align-self-end project-info">
+            <div class="col col-md-2 align-self-end project-info" id="panel1">
+
+              <h3>FAQ</h3>
+              <div class="accordion" id="accordionFaq">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                      How do I scrobble music on this site?
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      This site relies on <a href="https://web-scrobbler.com">Web Scrobbler</a> browsers extensions for iOS/iPadOS (Safari), and desktop browsers (Chrome, Firefox, Safari and other modern browsers) on macOS, Windows and Linux. Android scrobbling can be done by <a href="https://github.com/kawaiiDango/pano-scrobbler">Pano Scrobbler</a>. I considered building scrobbling functionality for the site, but relying on existing, robust scrobbling apps that support <a href="https://last.fm">last.fm</a>, <a href="https://libre.fm">libre.fm</a>, <a href="https://listenbrainz.org">ListenBrainz</a> and <a href="https://github.com/krateng/maloja">Maloja</a> just made more sense.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      What if I don't scrobble music?
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      That's totally fine. This app was built with scrobbling music in mind, but it's a perfectly functional radio player if that's not your thing. The goal of this app was to reliably be able to show the metadata from streaming radio sources and try to fill in gaps in album and album art whenever possible.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      My scrobble didn't match properly on last.fm, why did this happen?
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <p>This app does it's best to clean up the data coming from a radio station source, but it can be imperfect. Music metadata is complex and easy to get mixed up. Songs with guest vocalists and collaborations are a nightmare and given the data is coming radio stations around the world, there is little consistency. This app is a best effort to clean-up the incoming data, removing data like (2007 Remaster), (Radio Edit) or (Clean Version). It checks with the last.fm api whether there's corrections for the song and artist. But sometimes there's just things you can't account for like human error (spelling mistakes), or maybe a long song name getting truncated in the stations database.</p>
+
+                      <p>If 100% scrobble accuracy is necessary for you, there is a setting in Web Scrobbler called "Scrobble recognized or edited tracks (default)" which would only scrobble a song if it's properly identified or edited. Then there is a Cache that you can review the disallowed scrobbles and edit them manually.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <a href="https://github.com/jbwharris/scrobblerad.io" class="gitLink" target="_blank"><i class="icon-github" aria-hidden="true"></i></a>
               <p class="fs-6">Built with ❤️ in 🇨🇦 by <a href="https://jbwharr.is">James Harris</a></p>
             </div>
 
-            <div id="player" class="col-md-8">
+            <div class="col-md-8" id="panel2">
               <div class="playermeta row row-cols-1 px-0 album-controls">
                 <div class="col col-md-5 player px-0 mt-0" id="webamp">
                   <img id="albumArt" src="img/defaultArt.png" class="img-fluid rounded mx-auto d-block" width="500" height="500" alt="">
                 </div>
                 <div class="col col-md-5 pt-3 p-4 metainfo">
-                  <p class="fs-3">Choose a station from the menu on the left to get started</p>
-                </div>
-              </div>
-
-              <div class="media-controls-wrapper">
-                <div class="media-controls">
-                  <button id="skipBack" type="button" class="btn btn-dark btn-lg mt-3">
-                    <i class="icon-backward"></i>
-                  </button>
-                  <button id="playButton" type="button" class="btn btn-dark btn-lg mt-3">
-                    <i class="icon-play"></i>
-                  </button>
-                  <button id="skipForward" type="button" class="btn btn-dark btn-lg mt-3">
-                    <i class="icon-forward"></i>
-                  </button>
+                  <p class="fs-3">Swipe left to pick a station to get started</p>
                 </div>
               </div>
             </div>
-            <nav class="stationNav col col-md-2">
+            <nav class="stationNav col col-md-2" id="panel3">
               <span class="navbar-text fw-bold h5">Choose A Station</span>
               <div class="d-flex flex-column position-relative" id="stationSelect">
 
               </div>
             </nav>
           </div>
+          <div class="media-controls-wrapper">
+            <div class="media-controls">
+              <button id="skipBack" type="button" class="btn btn-dark btn-lg mt-3">
+                <i class="icon-backward"></i>
+              </button>
+              <button id="playButton" type="button" class="btn btn-dark btn-lg mt-3">
+                <i class="icon-play"></i>
+              </button>
+              <button id="skipForward" type="button" class="btn btn-dark btn-lg mt-3">
+                <i class="icon-forward"></i>
+              </button>
+            </div>
+          </div>
+
         </div>
       </main>
     </div>
