--- a/swipe.html
+++ b/swipe.html
@@ -27,7 +27,7 @@
   <!-- Bootstrap CSS v5.0.2 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/iconfont.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-swipe.css">
 
 </head>
 
