--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- pwa support -->
   <link rel="manifest" href="manifest.json" />
   <!-- ios support -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar" content="black-translucent" />
   <!-- The page color schemes -->
   <meta name="color-scheme" content="light dark">
@@ -31,54 +32,118 @@
 
 </head>
 
-<body class="d-flex flex-column">
-
-  <header class="fixed-top">
-    <h1 class="siteName">scrobblerad.io</h1>
-    <a href="https://github.com/jbwharris/scrobblerad.io" class="gitLink" target="_blank"><i class="icon-github" aria-hidden="true"></i></a>
-    <input type="checkbox" id="openSideMenu" class="openSideMenu">
-    <label for="openSideMenu" class="menuIconToggle">
-      <div class="hamb-line dia part-1"></div>
-      <div class="hamb-line hor"></div>
-      <div class="hamb-line dia part-2"></div>
-    </label>
-
-    <nav class="stationNav">
-      <div class="d-flex flex-column" id="stationSelect">
-        <span class="navbar-text p-0 fw-bold h5 ps-2">Choose A Station</span>
-      </div>
-    </nav>
-
-  </header>
-
-  <div class="container" id="mainWrapper">
+<body class="d-flex flex-column" ontouchstart="">
+  <div class="container-fluid" id="player">
     <div class="row">
       <main class="flex-shrink-0 col">
-        <div class="container px-0" id="metadata">
-          <div id="player">
-            <div class="playermeta row row-cols-1 px-0 album-controls">
-              <div class="col col-md-5 player px-0 mt-0" id="webamp">
-                <img id="albumArt" src="img/defaultArt.png" class="img-fluid rounded mx-auto d-block" width="500" height="500" alt="">
+        <div class="container-fluid px-0" id="metadata">
+          <div class="row mobile-swipe">
+
+            <div class="col col-md-2 align-self-end project-info panels" id="panel1">
+
+              <h3 class="fw-bold h5 sidebar-text">Frequently Asked Questions</h3>
+              <div class="accordion" id="accordionFaq">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                      How do I scrobble music on this site?
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+                    <div class="accordion-body">
+                      This site relies on <a href="https://web-scrobbler.com">Web Scrobbler</a> browsers extensions for iOS/iPadOS (Safari), and desktop browsers (Chrome, Firefox, Safari and other modern browsers) on macOS, Windows and Linux. Android scrobbling can be done by <a href="https://github.com/kawaiiDango/pano-scrobbler">Pano Scrobbler</a>. I considered building scrobbling functionality for the site, but relying on existing, robust scrobbling apps that support <a href="https://last.fm">last.fm</a>, <a href="https://libre.fm">libre.fm</a>, <a href="https://listenbrainz.org">ListenBrainz</a> and <a href="https://github.com/krateng/maloja">Maloja</a> just made more sense.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      What if I don't scrobble music?
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+                    <div class="accordion-body">
+                      That's totally fine. This app was built with scrobbling music in mind, but it's a perfectly functional radio player if that's not your thing. The goal of this app was to reliably be able to show the metadata from streaming radio sources and try to fill in gaps in album and album art whenever possible.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      My scrobble didn't match properly on last.fm, why did this happen?
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+                    <div class="accordion-body">
+                      <p>This app does it's best to clean up the data coming from a radio station source, but it can be imperfect. Music metadata is complex and easy to get mixed up. Songs with guest vocalists and collaborations are a nightmare and given the data is coming radio stations around the world, there is little consistency. This app is a best effort to clean-up the incoming data, removing data like (2007 Remaster), (Radio Edit) or (Clean Version). It checks with the last.fm api whether there's corrections for the song and artist. But sometimes there's just things you can't account for like human error (spelling mistakes), or maybe a long song name getting truncated in the stations database.</p>
+
+                      <p>If 100% scrobble accuracy is necessary for you, there is a setting in Web Scrobbler called "Scrobble recognized or edited tracks (default)" which would only scrobble a song if it's properly identified or edited. Then there is a Cache that you can review the disallowed scrobbles and edit them manually.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                      How does Apple Carplay support work?
+                    </button>
+                  </h2>
+                  <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFaq">
+                    <div class="accordion-body">
+                      <p>This website can be used with Apple Carplay and pretty much anywhere else that supports the mediaSession API. While this is an web app that can be run anywhere, it does have some playback quirks when being used in a car. This app relies on the built-in Now Playing app in Carplay to show the song data. Unfortunately there doesn't seem to be anything similar for Android Auto 🤷🏼‍♂️</p>
+
+                      <ul>
+                        <li>Playback on iOS can be initiated before you start driving. Simply open the site in Safari, pick a station and playback should start and the song, artist, station name and album cover should be visible on screen.</li>
+                        <li>You can use the in-car media controls to switch between stations. Playback will continue for the current station until the new audio stream begins loading. There is an on-screen notice of what station is loading. You can skip multiple stations if you're looking for a particular station.</li>
+                        <li>If playback stops while driving due to poor mobile data coverage, the app will keep trying to load the feed. If it pauses for awhile, try skipping to the next station and back again and it should initiate a new system. As iOS only allows access to play/pause, next and previous track, unfortunately there's no way to reload a feed directly with Carplay.</li>
+                        <li>Resume playback after leaving the car and coming back seems to be hit-and-miss. If it's been a short period of time, it will sometimes just resume playing the session. Otherwise you'll just need to go into Safari and start playing music again.</li>
+                        <li>Be sure to obey local traffic laws and not use your phone while driving.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="col col-md-5 pt-3 p-4 metainfo">
-                <p class="fs-3">Choose a station from the menu on the left to get started</p>
-              </div>
+
+              <footer class="p-3 text-center text-md-left">
+                <p class="fs-6">Built with ❤️ in 🇨🇦 by <a href="https://jbwharr.is">James Harris</a></p>
+                <a href="https://github.com/jbwharris/scrobblerad.io" class="gitLink" target="_blank"><i class="icon-github" aria-hidden="true"></i></a>
+              </footer>
             </div>
 
-            <div class="media-controls-wrapper">
-              <div class="media-controls">
-                <button id="skipBack" type="button" class="btn btn-dark btn-lg mt-3">
-                  <i class="icon-backward"></i>
-                </button>
-                <button id="playButton" type="button" class="btn btn-dark btn-lg mt-3">
-                  <i class="icon-play"></i>
-                </button>
-                <button id="skipForward" type="button" class="btn btn-dark btn-lg mt-3">
-                  <i class="icon-forward"></i>
-                </button>
+            <div class="col-md-8 panels" id="panel2">
+              <div class="playermeta row row-cols-1 px-0 album-controls">
+                <div class="col col-md-5 player px-0 mt-0" id="webamp">
+                  <img id="albumArt" src="img/defaultArt.png" class="img-fluid rounded mx-auto d-block" width="500" height="500" alt="">
+                </div>
+                <div class="col col-md-5 pt-3 p-4 metainfo">
+                  <p class="fs-3">Swipe left to pick a station to get started</p>
+                </div>
               </div>
             </div>
+            <nav class="stationNav col col-md-2 panels" id="panel3">
+              <h3 class="sidebar-text fw-bold h5">Choose A Station</h3>
+              <div class="d-flex flex-column position-relative" id="stationSelect">
+
+              </div>
+            </nav>
           </div>
+          <div class="media-controls-wrapper">
+            <div class="media-controls">
+              <button id="skipBack" type="button" class="btn btn-dark btn-lg mt-3">
+                <i class="icon-backward"></i>
+              </button>
+              <button id="playButton" type="button" class="btn btn-dark btn-lg mt-3">
+                <i class="icon-play"></i>
+              </button>
+              <button id="reloadStream" type="button" class="btn btn-dark btn-lg mt-3">
+                <i class="icon-reload"></i>
+              </button>
+              <button id="skipForward" type="button" class="btn btn-dark btn-lg mt-3">
+                <i class="icon-forward"></i>
+              </button>
+            </div>
+          </div>
+
+        </div>
       </main>
     </div>
   </div>
