--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
 
             <div class="col col-xxl-8 col-md-6 panels" id="panel2">
-              <div class="playermeta px-0 album-controls">
+              <div class="playermeta px-0 row album-controls">
                 <div class="col col-xxl-6 col-md-7 player px-0 mt-md-2" id="webamp">
                   <img id="albumArt" src="img/defaultArt.png" class="img-fluid rounded mx-auto d-block" width="500" height="500" alt="">
                 </div>
