Add loader to station nav

--- a/index.html
+++ b/index.html
@@ -151,7 +151,11 @@
               <nav class="stationNav">
                 <h3 class="sidebar-text fw-bold h5">Choose A Station</h3>
                 <div class="d-flex flex-column position-relative" id="stationSelect">
-
+                  <div class="loader">
+                    <div class="spinner-grow text-light">
+                      <span class="visually-hidden">Loading...</span>
+                    </div>
+                  </div>s
                 </div>
               </nav>
             </div>
