--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta property="og:type" content="music.radio_station">
   <meta property="og:image" content="https://scrobblerad.io/img/social-thumb.png">
   <!-- Bootstrap CSS v5.0.2 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha256-PI8n5gCcz9cQqQXm3PEtDuPG8qx9oFsFctPg0S5zb8g=" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/external/bootstrap.min.css">
   <link rel="stylesheet" href="css/iconfont.css">
   <link rel="stylesheet" href="css/style.css">
 
@@ -129,8 +129,15 @@
               </div>
 
               <footer class="p-3 text-center text-md-left">
-                <p class="fs-6">Built with ❤️ in 🇨🇦<br />by <a href="https://jbwharr.is">jbwharris</a></p>
-                <a href="https://github.com/jbwharris/scrobblerad.io" class="gitLink" target="_blank"><i class="icon-github" aria-hidden="true"></i></a>
+                <p class="fs-6">Built with ❤️ in 🇨🇦<br />
+                  by <a href="https://jbwharr.is">jbwharris</a><br />
+                  <a href="https://github.com/jbwharris/scrobblerad.io" class="iconLink" target="_blank"><i class="icon-github" aria-hidden="true"></i></a></p>
+                <p class="fs-6">Monthly radio<br />
+                  discovery playlist<br />
+                  <a href="https://music.apple.com/ca/playlist/jaybeedub-mixtape/pl.u-dkelCypyBM" class="iconLink"><i class="icon-apple" aria-hidden="true"></i><span class="visually-hidden">opens Apple Music JayBeeDub Mixtape in a new tab</span></a>
+                  <a href="https://open.spotify.com/playlist/2MJuX8Lx1IyvEzSXTcUw42?go=1&sp_cid=1b8011ab28a385db6cd8f67005590e9d" class="iconLink"><i class="icon-spotify" aria-hidden="true" target="_blank"></i><span class="visually-hidden">opens Spotify Music JayBeeDub Mixtape in a new tab</span></a>
+                </p>
+
               </footer>
             </div>
 
@@ -200,9 +207,8 @@
   </template>
 
   <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha256-3gQJhtmj7YnV1fmtbVcnAV6eI4ws0Tr48bVZCThtCGQ=" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/@web-scrobbler/metadata-filter@latest/dist/filter.min.js"></script>
+  <script src="js/external/bootstrap.min.js"></script>
+  <script src="js/external/filter.min.js"></script>
 
   <script src="js/stations-dist.js"></script>
   <script src="js/main-dist.js"></script>
