Add Bluesky link

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: light)">
   <meta name="theme-color" content="#111111" media="(prefers-color-scheme: dark)">
 
-  <meta property="og:title" content="scrobblerad.io - Awesome radio, everyday!">
-  <meta property="og:site_name" content="scrobblerad.io">
+  <meta property="og:title" content="ScrobbleRadio - Awesome radio, everyday!">
+  <meta property="og:site_name" content="ScrobbleRadio">
   <meta property="og:url" content="https://scrobblerad.io">
-  <meta property="og:description" content="scrobblerad.io is a curated list of radio stations that play great music. Independent stations that play new, interesting and bold music without the constraints of tiny corporate radio playlists. If you love music discovery and finding the next great jam, scrobblerad.io is for you.">
+  <meta property="og:description" content="ScrobbleRadio is a curated list of radio stations that play great music. Independent stations that play new, interesting and bold music without the constraints of tiny corporate radio playlists. If you love music discovery and finding the next great jam, ScrobbleRadio is for you.">
   <meta property="og:type" content="music.radio_station">
   <meta property="og:image" content="https://scrobblerad.io/img/social-thumb.png">
   <!-- Bootstrap CSS v5.0.2 -->
@@ -141,7 +141,7 @@
               <footer class="p-3 text-center text-md-left">
                 <p class="fs-6">Built with ❤️ in 🇨🇦<br />
                   by <a href="https://jbwharr.is">jbwharris</a><br />
-                  <a href="https://github.com/jbwharris/scrobblerad.io" class="iconLink" target="_blank"><i class="icon-github" aria-hidden="true"></i></a></p>
+                  <a href="https://github.com/jbwharris/scrobblerad.io" class="iconLink" target="_blank"><i class="icon-github" aria-hidden="true"></i><span class="visually-hidden">opens ScrobbleRadio GitHub repository</span></a><a href="https://bsky.app/profile/scrobblerad.io" class="iconLink" target="_blank"><i class="icon-bluesky ml-1" aria-hidden="true"></i><span class="visually-hidden">opens ScrobbleRadio Bluesky account</span></a></p>
                 <p class="fs-6">Monthly radio<br />
                   discovery playlist<br />
                   <a href="https://music.apple.com/ca/playlist/jaybeedub-mixtape/pl.u-dkelCypyBM" class="iconLink"><i class="icon-apple" aria-hidden="true"></i><span class="visually-hidden">opens Apple Music JayBeeDub Mixtape in a new tab</span></a>
