Change playlist wording

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <p class="fs-6">Built with ❤️ in 🇨🇦<br />
                   by <a href="https://jbwharr.is">jbwharris</a><br />
                   <a href="https://github.com/jbwharris/scrobblerad.io" class="iconLink" target="_blank"><i class="icon-github" aria-hidden="true"></i><span class="visually-hidden">opens ScrobbleRadio GitHub repository</span></a><a href="https://bsky.app/profile/scrobblerad.io" class="iconLink" target="_blank"><i class="icon-bluesky ml-1" aria-hidden="true"></i><span class="visually-hidden">opens ScrobbleRadio Bluesky account</span></a></p>
-                <p class="fs-6">Monthly radio<br />
+                <p class="fs-6">Monthly ScrobbleRadio Mix<br />
                   discovery playlist<br />
                   <a href="https://music.apple.com/ca/playlist/jaybeedub-mixtape/pl.u-dkelCypyBM" class="iconLink"><i class="icon-apple" aria-hidden="true"></i><span class="visually-hidden">opens Apple Music JayBeeDub Mixtape in a new tab</span></a>
                   <a href="https://open.spotify.com/playlist/2MJuX8Lx1IyvEzSXTcUw42?go=1&sp_cid=1b8011ab28a385db6cd8f67005590e9d" class="iconLink"><i class="icon-spotify" aria-hidden="true" target="_blank"></i><span class="visually-hidden">opens Spotify Music JayBeeDub Mixtape in a new tab</span></a>
