--- a/index.html
+++ b/index.html
@@ -147,13 +147,12 @@
                   <a href="https://music.apple.com/ca/playlist/jaybeedub-mixtape/pl.u-dkelCypyBM" class="iconLink"><i class="icon-apple" aria-hidden="true"></i><span class="visually-hidden">opens Apple Music JayBeeDub Mixtape in a new tab</span></a>
                   <a href="https://open.spotify.com/playlist/2MJuX8Lx1IyvEzSXTcUw42?go=1&sp_cid=1b8011ab28a385db6cd8f67005590e9d" class="iconLink"><i class="icon-spotify" aria-hidden="true" target="_blank"></i><span class="visually-hidden">opens Spotify Music JayBeeDub Mixtape in a new tab</span></a>
                 </p>
-
               </footer>
             </div>
 
             <div class="col col-xxl-8 col-md-6 panels" id="panel2">
 
-              <div class="playermeta px-0 row album-controls">
+              <div class="playermeta px-0 row album-controls" id="playermeta">
                 <div class="col col-xxl-6 col-md-7 player px-0 mt-md-2" id="webamp">
                   <img id="albumArt" src="img/defaultArt.png" class="img-fluid rounded mx-auto d-block" width="500" height="500" alt="ScrobbleRadio - scrobble awesome radio">
                 </div>
