Add scrobbling functionality

--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
               </div>
 
               <footer class="p-3 text-center text-md-left">
+
+                <button id="lastfm-auth"><i class="icon-lastfm"></i> Connect Last.fm</button>
+
                 <p class="fs-6">Built with ❤️ in 🇨🇦<br />
                   by <a href="https://jbwharr.is">jbwharris</a><br />
                   <a href="https://github.com/jbwharris/scrobblerad.io" class="iconLink" target="_blank"><i class="icon-github" aria-hidden="true"></i><span class="visually-hidden">opens ScrobbleRadio GitHub repository</span></a><a href="https://bsky.app/profile/scrobblerad.io" class="iconLink" target="_blank"><i class="icon-bluesky ml-1" aria-hidden="true"></i><span class="visually-hidden">opens ScrobbleRadio Bluesky account</span></a></p>
@@ -218,8 +221,11 @@
   <!-- Bootstrap JavaScript Libraries -->
   <script src="js/external/bootstrap.min.js"></script>
   <script src="js/external/filter.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-md5@0.8.3/src/md5.min.js"></script>
 
   <script src="js/stations-dist.js"></script>
+  <script src="js/scrobbler.js"></script>
   <script src="js/main-dist.js"></script>
 
   <!-- Matomo -->
