--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
               <footer class="p-3 text-center text-md-left">
 
-                <button id="lastfm-auth"><i class="icon-lastfm"></i> Connect Last.fm</button>
+                <button id="lastfm-auth"><i class="icon-lastfm"></i> Login with Last.fm</button>
 
                 <p class="fs-6">Built with ❤️ in 🇨🇦<br />
                   by <a href="https://jbwharr.is">jbwharris</a><br />
@@ -226,7 +226,7 @@
 
   <script src="js/stations-dist.js"></script>
   <script src="js/scrobbler.js"></script>
-  <script src="js/main-dist.js"></script>
+  <script src="js/main.js"></script>
 
   <!-- Matomo -->
   <script>
