--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 
               <footer class="p-3 text-center text-md-left">
 
+                <small>Scrobbling Beta</small>
                 <button id="lastfm-auth"><i class="icon-lastfm"></i> Login with Last.fm</button>
 
                 <p class="fs-6">Built with ❤️ in 🇨🇦<br />
