Add viewport tweak

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <!-- End Matomo Tag Manager -->
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
+
   <link rel="icon" href="img/icons/icon.svg" />
 
   <!-- pwa support -->
